--- a/PotKiller/app/src/main/res/layout/activity_main.xml
+++ b/PotKiller/app/src/main/res/layout/activity_main.xml
@@ -9,4 +9,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="hack.hackillinois.potkiller.potkiller.MainActivity">
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Login"
+        android:id="@+id/loginButton"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:onClick="loginHit"/>
 </RelativeLayout>
