--- a/PotKillerAndroid/app/src/main/res/drawable/splash_screen.xml
+++ b/PotKillerAndroid/app/src/main/res/drawable/splash_screen.xml
@@ -7,7 +7,7 @@
     <item>
         <bitmap
             android:gravity="center"
-            android:src="@mipmap/ic_launcher"/>
+            android:src="@mipmap/splash_screen_image_large"/>
     </item>
 
 </layer-list>
